--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth/prisma-adapter": "^1.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.32.6",
@@ -23,9 +25,10 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
-    "lucide-react": "^0.268.0",
+    "lucide-react": "^0.263.1",
     "next": "13.4.13",
     "next-auth": "^4.23.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
