--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -38,6 +39,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "prisma": "^5.1.1"
   }
 }
