--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "^13.4.19",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
+    "nextjs13-progress": "^1.1.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
